--- a/Final Report.Rmd
+++ b/Final Report.Rmd
@@ -130,6 +130,10 @@ While the dataset was comprehensive, it did not contain information on the socio
 
 The classification of types of crime in the dataset was messy and was not conducive for analysis, making it difficult to study the correlation between types of crime being committed and other variables such as area and demographics. This is because the crime description in the original dataset differs even for crimes that are broadly similar in nature. We thus have to go through the dataset and make classifications that are logical and at the same time, conducive for analysis. 
 
+3. Lack of continuous variables
+
+The dataset contains mainly variables that are mainly discrete or categorical, making it diffcult for simple linear regression analysis to be conducted. This means that we have to rely mainly on hypothetical testing and visualisation for analysis and logistic regression for predictions. 
+
 Data Cleaning Description
 -------------------
 As the data is provided in two different csv files. The first step that we took was to merge the crime_data and code_data into one single dataset. Then we looked at the date columns (date occured and date reported) and reformated each date to three new columns. Thus creating a new colum for the day occured, month occured and year occured as well as day reported, month reported and year reported. 
@@ -162,7 +166,6 @@ As we put the focus of our analysis on understanding Los Angeles' victim profile
 
 
 
-
 Demographic
 =====================
 
@@ -172,7 +175,7 @@ Age and sex distribution
 -------------------
 
 ```{r library, echo=FALSE, message=FALSE, warning=FALSE}
-library(dplyr) 
+library(dplyr)
 library(ggmap)
 library(ggplot2)
 library(dplyr)
@@ -200,7 +203,7 @@ summary(female_age,na.rm=TRUE)
 summary(male_age,na.rm=TRUE)
 #plot
 crime_data%>%filter(Victim.Sex=="F"|Victim.Sex=="M")%>%
-ggplot(aes(x=Victim.Age,fill=Victim.Sex)) + geom_histogram(binwidth = 1,position="dodge")+labs(x="Victim Age",y="Number of Victims")
+ggplot(aes(x=Victim.Age,fill=Victim.Sex)) + geom_histogram(binwidth = 1,position="dodge")
 
 ```
 
@@ -241,7 +244,7 @@ avg_age<-crime_data%>%
 #option2:boxplot of age between different Ethnicity(chosen)
 crime_data%>%
   filter(Victim.Sex=="F"|Victim.Sex=="M",!Victim.Descent.Global=="-",!Victim.Descent.Global=="")%>%
-  ggplot(aes(x=Victim.Sex,y=Victim.Age,fill=Victim.Descent.Global))+geom_boxplot()+labs(x="Gender",y="Victim Age")
+  ggplot(aes(x=Victim.Sex,y=Victim.Age,fill=Victim.Descent.Global))+geom_boxplot()
 ```
 From the boxplot based on ethnicity and gender,Hispanic have the lowest median age among all ethnicity groups and female Hispanic is the lowest(around 33 years old).For Blacks and Hispanic,female victim tends to be younger while it is not that obvious for other ethinicty groups.
 
@@ -351,7 +354,6 @@ We are also intersted in the pattern of crime type with different ethnicity.Over
 ```{r}
 crime_data %>% filter(!Victim.Descent.Global=="-",!Victim.Descent.Global==" ") %>% ggplot(aes(x=Victim.Descent.Global, fill=crime_type))+ geom_bar(position='fill') + labs(x="Victim's Ethnicity", y= "Proportion of Crimes")
 ```
-
 
 
 
@@ -760,10 +762,7 @@ Help LA police, predict the crime, prevention for the potential victims
 
 What would be the next steps?	
 -------------------
-In this paper, we focus on the victim of crime in order to help prevent certain crimes. The next step could be carrying out investigation in the suspect of crime to help police find suspects and solve crime more efficiently.  
-crime type prediction
-area crime prediction
-suspect
+
 
 
 
